terraform-practice/mini_3_tire_project/pr_route_associate.tf
resource "aws_route_table_association" "private" {

  for_each = aws_subnet.private

  subnet_id = each.value.id

  route_table_id = aws_route_table.private[each.key].id
}
