terraform-practice/mini_3_tire_project/pub_route.tf
resource "aws_route" "public_internet" {
  route_table_id         = aws_route_table.example.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.gw.id
}
